# cis

./: .dockerignore  .env  .gitignore  .mise.toml  CHANGELOG.md  Dockerfile  README.md  build-lambda.sh  cabal.project  cis.cabal  fourmolu.yaml  ghc.Dockerfile  makefile  run-jaeger.sh  samconfig.toml  template.yaml
.aws-sam/: build.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  check.yml  deploy.yml  diff.yml  haskell.yml  infra.yml  main-deploy.yml  pr-diff.yml
infra/: cdk.context.json  package-lock.json  package.json
infra/lib/: dns-stack.ts  infra-stack.ts  records-stack.ts
lib/: Cis.hs
server/: Main.hs
