cabal-version: 3.8
name:          cis
version:       0.1.0.0
author:        ilmari.vacklin@iki.fi
maintainer:    Ilmari Vacklin
build-type:    Simple

common warnings
  ghc-options: -Wall

common settings
  ghc-options:        -threaded
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    ExplicitNamespaces
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings

common dependencies
  build-depends:
    , base  ^>=4.18.0.0
    , text

executable cisserver
  import:         warnings, settings, dependencies
  main-is:        Main.hs
  hs-source-dirs: server
  build-depends:
    , aeson
    , cis
    , envy
    , hs-opentelemetry-instrumentation-wai
    , hs-opentelemetry-sdk
    , servant
    , servant-server
    , transformers
    , wai
    , wai-lambda

executable cisclient
  import:         warnings, settings, dependencies
  main-is:        Main.hs
  hs-source-dirs: client
  build-depends:  cis

library
  import:          warnings, settings, dependencies
  hs-source-dirs:  lib
  exposed-modules: Cis
