cabal-version: 3.8
name:          cis
version:       0.1.0.0
author:        ilmari.vacklin@iki.fi
maintainer:    Ilmari Vacklin
build-type:    Simple

common warnings
  ghc-options: -Wall

common settings
  ghc-options:        -threaded
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    ExplicitNamespaces
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings

common dependencies
  build-depends:
    , base
    , text

executable cisserver
  import:         warnings, settings, dependencies
  main-is:        Main.hs
  hs-source-dirs: server
  build-depends:
    , aeson
    , aws-lambda-haskell-runtime
    , aws-lambda-haskell-runtime-wai
    , cis
    , envy
    , hs-opentelemetry-instrumentation-wai
    , hs-opentelemetry-sdk
    , servant
    , servant-server
    , transformers
    , wai

executable cisclient
  import:         warnings, settings, dependencies
  main-is:        Main.hs
  hs-source-dirs: client
  build-depends:  cis

library
  import:          warnings, settings, dependencies
  hs-source-dirs:  lib
  exposed-modules: Cis
