cabal-version: 3.8
name:          cis
version:       0.1.0.0
author:        ilmari.vacklin@iki.fi
maintainer:    Ilmari Vacklin
build-type:    Simple

common warnings
  ghc-options: -Wall

common settings
  ghc-options:        -threaded
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    ExplicitNamespaces
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings

common dependencies
  build-depends:
    , base  ^>=4.18
    , text  ^>=2.1

executable cisserver
  import:         warnings, settings, dependencies
  main-is:        Main.hs
  hs-source-dirs: server
  build-depends:
    , aeson                                 ^>=2.2
    , aws-lambda-haskell-runtime            ^>=4.3
    , aws-lambda-haskell-runtime-wai        ^>=2.0
    , cis
    , envy                                  ^>=2.1
    , hs-opentelemetry-awsxray              ^>=0.1
    , hs-opentelemetry-instrumentation-wai  ^>=0.1
    , hs-opentelemetry-sdk                  ^>=0.0.3.6
    , servant                               ^>=0.20
    , servant-server                        ^>=0.20
    , transformers                          ^>=0.6
    , wai                                   ^>=3.2

executable cisclient
  import:         warnings, settings, dependencies
  main-is:        Main.hs
  hs-source-dirs: client
  build-depends:  cis

library
  import:          warnings, settings, dependencies
  hs-source-dirs:  lib
  exposed-modules: Cis
